--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.5.2
 asttokens==2.0.8
+autopep8==1.7.0
 backcall==0.2.0
 black==22.10.0
 click==8.1.3
@@ -10,6 +11,7 @@ executing==1.1.1
 ipython==8.5.0
 jedi==0.18.1
 matplotlib-inline==0.1.6
+mypy==0.981
 mypy-extensions==0.4.3
 parso==0.8.3
 pathspec==0.10.1
@@ -19,12 +21,15 @@ platformdirs==2.5.2
 prompt-toolkit==3.0.31
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycodestyle==2.9.1
 Pygments==2.13.0
 pytz==2022.4
+refurb==1.3.0
 six==1.16.0
 sqlparse==0.4.3
 stack-data==0.5.1
+toml==0.10.2
 tomli==2.0.1
 traitlets==5.4.0
-tzdata==2022.4
+typing_extensions==4.4.0
 wcwidth==0.2.5
